# usdviewer

./: .clang-format  .gitignore  CMakeLists.txt  ISSUES.md  build.sh  build_app.bat  build_app.sh  gldebugger.cpp  gldebugger.h  hydrarenderer.cpp  hydrarenderer.h  icctransform.cpp  icctransform.h  main.cpp  mouseevent.cpp  mouseevent.h  mousefilter.cpp  mousefilter.h  platform.h  platform_mac.mm  platform_win.cpp  readme.md  test.cpp  test.h  usddebug.cpp  usddebug.h  usdimagingglwidget.cpp  usdimagingglwidget.h  usdoutlineritem.cpp  usdoutlineritem.h  usdoutlinerwidget.cpp  usdoutlinerwidget.h  usdselection.cpp  usdselection.h  usdstage.cpp  usdstage.h  usdstagewidget.cpp  usdstagewidget.h  usdutils.cpp  usdutils.h  (+6 more)
data/usd/: HelloWorld.usda
modules/: FindLcms2.cmake  FindOpenUSD.cmake
resources/: App.css  App.qss  AppIcon.bat  AppIcon.icns  AppIcon.sh  Copyright.txt  DS_Store.in  macicon.sh  resources.aps  usdviewer.icns
scripts/: clang-format.bat  clang-format.sh  deploydmg.sh  deployplugin.sh  deployxcode.sh  macdeploy.sh  macdmg.sh  macxcode.sh
sources/: application.cpp  application.h  command.cpp  command.h  commanddispatcher.cpp  commanddispatcher.h  commandstack.cpp  commandstack.h  console.cpp  console.h  consolewidget.cpp  consolewidget.h  consolewidget.ui  datamodel.cpp  datamodel.h  dockwidget.cpp  dockwidget.h  icctransform.cpp  icctransform.h  imagingglwidget.cpp  imagingglwidget.h  main.cpp  mime.h  mouseevent.cpp  mouseevent.h  notice.h  os.h  os_mac.mm  os_win.cpp  outlinerview.cpp  outlinerview.h  outlinerview.ui  platform.h  platform_mac.mm  primitem.cpp  primitem.h  progressitem.cpp  progressitem.h  progressview.cpp  progressview.h  (+124 more)
